--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -17,83 +16,51 @@
 
     <link
       rel="stylesheet"
-      href="reset.css"
-    />
-
-    <link
-      rel="stylesheet"
-      href="variables.css"
-    />
-
-    <link
-      rel="stylesheet"
-      href="utilities.css"
-    />
-
-    <link
-      rel="stylesheet"
       href="style.css"
-    />
-
-    <link
-      rel="stylesheet"
-      href="card.css"
-    />
-
-    <link
-      rel="stylesheet"
-      href="avatar.css"
-    />
-
-    <link
-      rel="stylesheet"
-      href="tag.css"
     />
 
     <title>Frontend Mentor | Blog preview card</title>
   </head>
-  <body class="font-size:base color:gray bg:primary">
-    <main class="wrapper cover">
-      <article
-        class="card flow cover-centered center bg:white"
-        style="--flow-space: var(--space--1)"
+  <body class="background-primary-400">
+    <article
+      class="[ card ] [ flow ] [ background-neutral-100 padding-500 border-radius-500 ]"
+      style="--flow-space: var(--space-300)"
+    >
+      <img
+        class="[ image ] [ border-radius-500 align-self-stretch margin-block-end-600 ]"
+        src="./assets/images/illustration-article.svg"
+        alt=""
+      />
+      <span
+        class="border-radius-50 background-primary-400 padding-block-50 padding-inline-100 font-size-300 color-neutral-900 font-weight-800"
+        >Learning</span
+      >
+      <time
+        class="font-size-300 color-neutral-900"
+        datetime=""
+        >Published 21 Dec 2023</time
+      >
+      <h3>HTML & CSS foundations</h3>
+      <p>
+        These languages are the backbone of every website, defining structure,
+        content, and presentation.
+      </p>
+      <div
+        class="[ flex-row ] [ margin-block-start-600 ]"
+        style="--flex-row-gap: var(--space-300)"
       >
         <img
-          class="border-radius:1 mbe-2"
-          src="./assets/images/illustration-article.svg"
+          class="avatar"
+          src="./assets/images/image-avatar.webp"
           alt=""
+          aria-labelledby="author-1"
         />
-        <span class="tag"><b>Learning</b></span>
-        <time
-          class="font-size:-1 color:dark"
-          datetime="2023-12-21"
-          >Published 21 Dec 2023</time
-        >
-        <h2 class="font-size:2 color:dark">HTML & CSS foundations</h2>
-        <p>
-          These languages are the backbone of every website, defining structure,
-          content, and presentation.
-        </p>
         <span
-          class="cluster mbs-2 font-size:-1 color:dark"
-          style="--cluster-space: var(--space--1)"
+          class="font-size-300 color-neutral-900 font-weight-800"
+          id="author-1"
+          >Greg Hooper</span
         >
-          <img
-            class="avatar"
-            src="./assets/images/image-avatar.webp"
-            alt=""
-          />
-          <b>Greg Hooper</b>
-        </span>
-      </article>
-    </main>
-    <footer>
-      Challenge by
-      <a
-        href="https://www.frontendmentor.io?ref=challenge"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </footer>
+      </div>
+    </article>
   </body>
 </html>
